insert botao voltar

--- a/confirmacao_pagamento.html
+++ b/confirmacao_pagamento.html
@@ -18,6 +18,9 @@
         <h5><strong>Forma de Pagamento:</strong> <span id="paymentMethod"></span></h5>
         <h5><strong>Valor Total da Compra:</strong> R$ 600,00</h5>
         <p class="text-success mt-3">Sua compra foi realizada com sucesso!</p>
+
+        <a href="produtos.html"><button type="button" class="btn btn-primary btn-block" id="finalizeButton">Voltar</button></a>
+
     </div>
 
 
