--- a/cadastro.html
+++ b/cadastro.html
@@ -71,9 +71,9 @@
                     <option value="TO">Tocantins (TO)</option>
                 </select>
             </div>
-            <div class="form-group">
+             <div class="form-group">
                 <label for="cep">CEP</label>
-                <input type="text" class="form-control" id="cep" placeholder="Digite o CEP" required>
+                <input type="text" class="form-control" id="cep" placeholder="Digite o CEP" required pattern="[0-9]{8}" title="Digite um CEP válido com 8 números">
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
