ajuste botao tela login

--- a/login.html
+++ b/login.html
@@ -12,14 +12,15 @@
         <form id="loginForm">
             <div class="form-group">
                 <label for="usuario">Usuário</label>
-                <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário" required>
+                <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário">
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
+                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+            
         </form>
+        <a href="produtos.html"><button class="btn btn-primary btn-block">Entrar</button></a>
         <div class="text-center mt-3">
             <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
         </div>
