--- a/produtos.html
+++ b/produtos.html
@@ -125,6 +125,8 @@
         </div>
 
         <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Finalizar Compra</button></a>
+
+        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Finalizar Compra</button></a>
     </div>
 
 </body>
