--- a/login.html
+++ b/login.html
@@ -5,25 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="pagina_login">
+
+    <nav>
+        <div class="title">COLOCAR NOME</div>
+    </nav>
+
     <div class="container mt-5" id="pagina_login">
-        <h2 class="text-center mb-4">Login</h2>
+        <h2 class="text-center mb-4">Acessar ou criar conta</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="usuario">Usuário</label>
-                <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário">
+                <input type="text" class="form-control" id="usuario" placeholder="Digite seu e-mail ou CPF">
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
                 <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
             </div>
-            
         </form>
         <a href="produtos.html"><button class="btn btn-primary btn-block">Entrar</button></a>
         <div class="text-center mt-3">
             <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
         </div>
     </div>
+
 </body>
 </html>
