--- a/cadastro.html
+++ b/cadastro.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="pagina_cadastro">
-    <div class="container mt-5" id="pagina_cadastro">
-        <h2 class="text-center mb-4">Cadastro de Novo Usuário</h2>
+
+
+        <nav>
+            <div class="title">COLOCAR NOME</div>
+        </nav>
+        <div class="container mt-5" id="pagina_cadastro">
+        <h2 class="text-center mb-4">Crie sua conta</h2>
         <form action="login.html" method="POST">
             <div class="form-group">
                 <label for="nome">Nome</label>
