--- a/produtos.html
+++ b/produtos.html
@@ -5,30 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Produtos</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container mt-5" id="productPage">
-        <h2 class="text-center mb-4">Lista de Produtos</h2>
+
+    <nav>
+        <div class="title">COLOCAR NOME</div>
+    </nav>
+
+    <div class="containerProdutos" id="productPage">
+        
         <div class="row">
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoGolden.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
+                        <h5 class="card-title">Ração Golden Special</h5>
+                        <p class="card-text">Cães Adultos Sabor Frango e Carne 15Kg</p>
+                        <p><strong>Preço: R$ 169,99</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
+                        <h5 class="card-title">Ração Premier</h5>
+                        <p class="card-text">Cães Adultos de Raças Pequenas Sabor Frango</p>
+                        <p><strong>Preço: R$ 49,89</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
                     </div>
                 </div>
