--- a/produtos.html
+++ b/produtos.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Produto 1</h5>
                         <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
@@ -130,7 +130,6 @@
 
         </div>
 
-        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Finalizar Compra</button></a>
 
         <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Finalizar Compra</button></a>
     </div>
