--- a/produtos.html
+++ b/produtos.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 2">
                     <div class="card-body">
                         <h5 class="card-title">Ração Premier</h5>
                         <p class="card-text">Cães Adultos de Raças Pequenas Sabor Frango</p>
@@ -41,88 +41,89 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoGoldenGato.jpg" class="card-img-top" alt="Produto 3">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
+                        <h5 class="card-title">Ração Golden</h5>
+                        <p class="card-text">Gatos Adultos Castrados Sabor Frango 10kg</p>
+                        <p><strong>Preço: R$ 169,00</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="imgs/racaoUmidaWhiskas.jpg" class="card-img-top" alt="Produto 4">
+                    <div class="card-body">
+                        <h5 class="card-title">Ração Úmida Whiskas</h5>
+                        <p class="card-text">Sachê Carne ao Molho para Gatos Adultos Castrados 85 g</p>
+                        <p><strong>Preço: R$ 3,99</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="imgs/racaoGoldenNatural.jpg" class="card-img-top" alt="Produto 5">
+                    <div class="card-body">
+                        <h5 class="card-title">Ração Golden Natural1</h5>
+                        <p class="card-text">Cães Adultos de Porte Médio e Grande Sabor Frango com Batata Doce 12kg</p>
+                        <p><strong>Preço: R$ 169,89</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/racaoRoyalCaninPremium.jpg" class="card-img-top" alt="Produto 6">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
+                        <h5 class="card-title">Ração Royal Canin Premium</h5>
+                        <p></p>
+                        <p class="card-text">Canin Premium Cat para Gatos Adultos Castrados 1kg</p>
+                        <p><strong>Preço: R$ 74,99</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="imgs/racaoUmidaGranPlus.jpg" class="card-img-top" alt="Produto 7">
+                    <div class="card-body">
+                        <h5 class="card-title">Ração Úmida GranPlus</h5>
+                        <p class="card-text">Sachê para Cães Adultos Sabor Carne - 100g</p>
+                        <p><strong>Preço: R$ 3,99</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="imgs/areiaHigienica.jpg" class="card-img-top" alt="Produto 8">
+                    <div class="card-body">
+                        <h5 class="card-title">Areia Higiênica Cansei de Ser Gato</h5>
+                        <p class="card-text">Biodegradável Grãos Finos</p>
+                        <p><strong>Preço: R$ 69,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
+                    <img src="imgs//simparic.jpg" class="card-img-top" alt="Produto 9">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
+                        <h5 class="card-title">Antipulgas Simparic</h5>
+                        <p class="card-text">Antipulgas Simparic 40 mg para cães 10,1 a 20 kg</p>
+                        <p><strong>Preço: R$ 125,00</strong></p>
+                        <p>Avaliação: ⭐⭐⭐⭐⭐</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
+                    <img src="imgs/brinquedo.jpg" class="card-img-top" alt="Produto 10">
                     <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
-                        <p>Avaliação: ⭐⭐⭐</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="imgs/racaoPremier.jpg" class="card-img-top" alt="Produto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto 1</h5>
-                        <p class="card-text">Detalhes: Modelo A, Marca X, Cor Vermelho</p>
-                        <p><strong>Preço: R$ 100,00</strong></p>
+                        <h5 class="card-title">Brinquedo Líder Pet Bola</h5>
+                        <p class="card-text">Cravo para Cães - Cores Sortidas</p>
+                        <p><strong>Preço: R$ 7,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
                     </div>
                 </div>
