--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 
 
         <nav>
-            <div class="title">COLOCAR NOME</div>
+            <div class="title">Salva Pets Shop</div>
         </nav>
         <div class="container mt-5" id="pagina_cadastro">
         <h2 class="text-center mb-4">Crie sua conta</h2>
