--- a/confirmacao_pagamento.html
+++ b/confirmacao_pagamento.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <div class="title">Salva Pets Shop</div>
+    </nav>
     <div class="container mt-5" id="confirmationPage">
         <h2 class="text-center mb-4">Compra Finalizada com Sucesso!</h2>
         <h5>Resumo da Compra:</h5>
