--- a/produtos.html
+++ b/produtos.html
@@ -10,10 +10,10 @@
 <body>
 
     <nav>
-        <div class="title">COLOCAR NOME</div>
+        <div class="title">Salva Pets Shop</div>
     </nav>
 
-    <div class="containerProdutos" id="productPage">
+    <div class="containerProdutos" id="pagina_produtos">
         
         <div class="row">
 
@@ -25,6 +25,8 @@
                         <p class="card-text">Cães Adultos Sabor Frango e Carne 15Kg</p>
                         <p><strong>Preço: R$ 169,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -36,6 +38,8 @@
                         <p class="card-text">Cães Adultos de Raças Pequenas Sabor Frango</p>
                         <p><strong>Preço: R$ 49,89</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -47,6 +51,8 @@
                         <p class="card-text">Gatos Adultos Castrados Sabor Frango 10kg</p>
                         <p><strong>Preço: R$ 169,00</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -58,6 +64,8 @@
                         <p class="card-text">Sachê Carne ao Molho para Gatos Adultos Castrados 85 g</p>
                         <p><strong>Preço: R$ 3,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -69,6 +77,8 @@
                         <p class="card-text">Cães Adultos de Porte Médio e Grande Sabor Frango com Batata Doce 12kg</p>
                         <p><strong>Preço: R$ 169,89</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -81,6 +91,8 @@
                         <p class="card-text">Canin Premium Cat para Gatos Adultos Castrados 1kg</p>
                         <p><strong>Preço: R$ 74,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -92,6 +104,8 @@
                         <p class="card-text">Sachê para Cães Adultos Sabor Carne - 100g</p>
                         <p><strong>Preço: R$ 3,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -103,6 +117,8 @@
                         <p class="card-text">Biodegradável Grãos Finos</p>
                         <p><strong>Preço: R$ 69,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -114,6 +130,8 @@
                         <p class="card-text">Antipulgas Simparic 40 mg para cães 10,1 a 20 kg</p>
                         <p><strong>Preço: R$ 125,00</strong></p>
                         <p>Avaliação: ⭐⭐⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
+
                     </div>
                 </div>
             </div>
@@ -125,6 +143,7 @@
                         <p class="card-text">Cravo para Cães - Cores Sortidas</p>
                         <p><strong>Preço: R$ 7,99</strong></p>
                         <p>Avaliação: ⭐⭐⭐</p>
+                        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Comprar</button></a>
                     </div>
                 </div>
             </div>
@@ -132,7 +151,6 @@
         </div>
 
 
-        <a href="pagamento.html"><button class="btn btn-success btn-block" id="finalizarCompra">Finalizar Compra</button></a>
     </div>
 
 </body>
